--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template • Collection</title>
+    <title>TypeScript • Moo-vies Fullstack</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link
+    async
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
+  />
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui-react/dist/umd/semantic-ui-react.min.js"></script>
   </head>
   <body>
     <section id="app" class="app-container"></section>
